Tue May 27 03:03:33 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h,include/xapian/snipper.h: Use
	  appropriate named types rather than "int" or "unsigned int".

Tue May 27 03:02:48 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipperinternal.h: Remove constants which are no longer used.

Tue May 27 02:48:44 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h,include/xapian/snipper.h:
	  Rework Snipper methods set_smoothing_coef() and set_window_size() as
	  optional parameters of generate_snippet().

Tue May 27 02:33:39 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h: Just pass rm_docno through to
	  Snipper::Internal::calculate_rm() as a parameter rather than storing
	  it in a member variable.

Tue May 27 02:25:41 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Use clear() method to empty a container.

Tue May 27 02:22:37 GMT 2014  Olly Betts <olly@survex.com>

	* tests/api_snipper.cc: Drop unused <algorithm>.

Tue May 27 02:21:53 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Eliminate ret_value variable.

Tue May 27 02:20:25 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Avoid unnecessary substr operations.

Tue May 27 02:17:32 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Prefer ++i to i++ in loops.

Tue May 27 02:16:14 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc: Use TermIterator::positionlist_count().

Tue May 27 02:14:52 GMT 2014  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h,include/xapian/snipper.h: Fix
	  typos in comments and variable names in new snipper code.

Tue May 27 02:13:09 GMT 2014  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Hook up new Snipper API tests to actually be
	  used.

Tue May 27 02:09:49 GMT 2014  Mihai Bivol <mm.bivol@gmail.com>

	* tests/api_snipper.cc: Add Snipper API tests.

Tue May 27 02:04:26 GMT 2014  Olly Betts <olly@survex.com>
